--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,201 @@
 body {
-    font-family: sans-serif;
-
+  font-family: sans-serif;
+  margin: 16px;
 }
 
 h1 {
-    font-size: 16px;
-    text-align: center;
+  font-size: 16px;
+  text-align: center;
 }
 
 img {
-    width: 100%;
-    border-radius: 8px;
+  width: 100%;
+  border-radius: 8px;
 }
 
 .fewo-list-item-wrapper {
-    border-width: 2px;
-    border-color: lightblue;
-    border-style: solid;
-    border-radius: 8px;
-    width: 50%;
-    font-size: 12px;
+  border-width: 2px;
+  border-color: lightblue;
+  border-style: solid;
+  border-radius: 8px;
+  width: 50%;
+  font-size: 12px;
 }
 
 .fewo-list-item-wrapper h2 {
-    font-size: small;
-    margin: 0;
+  font-size: small;
+  margin: 0;
 }
 
 .fewo-list.item.wrapper p {
-    margin: 0;
+  margin: 0;
 }
 
 .fewo-list-item-wrapper a {
-    text-decoration: none;
-    padding: 4px 4px;
-    border: rgb(0, 166, 255) 1px solid;
-    border-radius: 8px;
-    display: block;
-    text-align: center;
-    margin: 4px 4px;
-    color: black;
+  text-decoration: none;
+  padding: 4px 4px;
+  border: rgb(0, 166, 255) 1px solid;
+  border-radius: 8px;
+  display: block;
+  text-align: center;
+  margin: 4px 4px;
+  color: black;
+}
+
+.details-div {
+  display: flex;
+  column-gap: 16px;
+}
+
+.info-left {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+}
+
+.characteristics-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.characteristics-wrapper span {
+  padding: 8px 16px;
+  color: white;
+  background-color: #4cacbc;
+  border-radius: 8px;
+}
+
+.features-wrapper {
+  background: #f6e3c5;
+  padding: 8px 16px;
+  border-radius: 8px;
+  margin: 0;
+}
+
+.features-wrapper h2 {
+  margin: 0;
+  padding-top: 8px;
+}
+
+.features-list {
+  list-style: '🗸';
+  padding: 0px 32px;
+}
+
+.features-list li {
+  padding: 8px 16px;
+}
+
+.info-right {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+}
+
+.calendar-wrapper {
+  width: 100%;
+  background-color: #a0d995;
+  border-radius: 8px;
+}
+
+.calendar-head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 25px 10px 20px 30px;
+}
+
+.calendar-head p {
+  font-size: 1.45rem;
+  font-weight: 600;
+  margin: 0;
+}
+
+.icons span {
+  height: 38px;
+  width: 38px;
+  margin: 0 1px;
+  text-align: center;
+  line-height: 38px;
+  border-radius: 50%;
+}
+
+.icons span:hover {
+  background: #6cc4a1;
+  cursor: pointer;
+}
+
+.calendar-body {
+  padding: 8px;
+}
+
+.calendar-body ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  text-align: center;
+  padding: 0;
+}
+
+.calendar-body ul li {
+  position: relative;
+  width: calc(100% / 7);
+}
+
+.days li {
+  cursor: pointer;
+  margin-top: 30px;
+  z-index: 1;
+}
+
+.days li::before {
+  position: absolute;
+  content: '';
+  height: 40px;
+  width: 40px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  z-index: -1;
+}
+
+.days li:hover::before {
+  background-color: #6cc4a1;
+}
+
+.weeks li {
+  font-weight: 600;
+}
+
+.days {
+  margin-bottom: 20px;
+}
+
+.sidepanel-div {
+  background-color: #f6e3c5;
+  padding-bottom: 8px;
+  border-radius: 8px;
+}
+
+.sidepanel-div p {
+  text-align: end;
+  font-size: 1.25rem;
+  font-weight: 600;
+  padding-right: 16px;
+}
+
+.host-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  height: 100%;
+  background: #f6e3c5;
+  border-radius: 8px;
+}
+
+.host-img-wrapper {
+  width: 50%;
+  padding: 8px 8px 0;
 }
