--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,7 @@ footer {
   display: flex;
   flex-direction: column;
   row-gap: 16px;
+  flex: 2;
 }
 
 .characteristics-wrapper {
@@ -185,7 +186,7 @@ footer {
 }
 
 .features-list {
-  list-style: '🗸';
+  list-style: '✓';
   padding: 0px 32px;
 }
 
@@ -220,6 +221,7 @@ footer {
   display: flex;
   flex-direction: column;
   row-gap: 16px;
+  flex: 1;
 }
 
 .calendar-price {
@@ -289,7 +291,7 @@ footer {
 .days li {
   cursor: pointer;
   margin-top: 16px;
-  z-index: 1;
+  z-index: 10;
 }
 
 .days li::before {
@@ -306,6 +308,28 @@ footer {
 
 .days li:hover::before {
   background-color: #6cc4a1;
+}
+
+.days .occupied::before {
+  width: 30px;
+  height: 30px;
+  padding: 0 20px;
+  border-radius: 0%;
+  background: #ecb151;
+}
+
+.days .occupied.occupied-first::before{
+  border-radius: 15px 0 0 15px;
+  padding-left: 0;
+}
+
+.days .occupied.occupied-last::before{
+  border-radius: 0 15px 15px 0;
+  padding-right: 0;
+}
+
+.inactive {
+  color: gray;
 }
 
 .weeks li {
