--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,9 @@ footer {
 
 .all-filter-wrapper {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 8px;
   justify-content: space-between;
   margin-bottom: 16px;
   border-radius: 8px;
@@ -79,13 +82,23 @@ footer {
   flex-direction: column;
 }
 
+.fewo-type {
+  display: flex;
+  flex-direction: column;
+}
+
 .filter-btn {
   height: 50%;
-  background-color: #a0d995;
+  background: linear-gradient(
+    90deg,
+    rgba(160, 217, 149, 1) 0%,
+    rgba(50, 193, 22, 1) 70%
+  );
   align-self: flex-end;
+  border: none;
   padding: 4px 16px;
-  border: #6cc4a1 1px;
   border-radius: 8px;
+  font-weight: bold;
 }
 
 .fewo-list-sort {
@@ -107,6 +120,10 @@ footer {
 .sort-price {
   display: flex;
   align-items: center;
+}
+
+div.toggle {
+  font-weight: bold;
 }
 
 .fewo-list {
@@ -491,6 +508,10 @@ span {
   }
 
   .review-list {
+    flex-direction: row;
+  }
+
+  .all-filter-wrapper {
     flex-direction: row;
   }
 }
